--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Let's Flix",
-  "name": "Let's Flix Movie Database",
+  "short_name": "Lets Flix",
+  "name": "Lets Flix Movie Database",
   "icons": [
     {
       "src": "favicon.ico",
