--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,6 +28,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ff55a5",
+  "theme_color": "#000000",
   "background_color": "#ffffff"
 }
