--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook": "^8.1.4",
+    "react-helmet": "^6.1.0",
     "react-html5video": "^2.5.1",
     "react-player": "^2.7.0",
     "react-plyr": "^2.2.0",
