--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
+    "framer-motion": "^2.9.5",
+    "gsap": "^3.5.1",
     "html-react-parser": "^0.14.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
@@ -20,8 +22,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook": "^8.1.4",
+    "react-gsap": "^2.2.1",
     "react-helmet": "^6.1.0",
     "react-html5video": "^2.5.1",
+    "react-lazyload": "^3.1.0",
     "react-player": "^2.7.0",
     "react-plyr": "^2.2.0",
     "react-redux": "^7.2.1",
