--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.7.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "framer-motion": "^2.9.5",
@@ -21,6 +21,7 @@
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "money": "^0.2.0",
+    "query-string": "^4.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook": "^8.1.4",
@@ -33,7 +34,7 @@
     "react-plyr": "^2.2.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.27.13",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
