--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
+    "@mrmlnc/readdir-enhanced": "^2.2.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.10.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -18,6 +19,7 @@
     "gsap": "^3.5.1",
     "history": "^5.0.0",
     "html-react-parser": "^0.14.0",
+    "inquirer": "^8.0.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "money": "^0.2.0",
