--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-player": "^2.7.0",
     "react-plyr": "^2.2.0",
     "react-redux": "^7.2.1",
+    "react-responsive-masonry": "^2.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.27.13",
+    "react-viewer": "^3.2.2",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
